DEMO OSM/OCP4-istio/mem-hpa/2_dc.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: memory-php
  labels:
    app: memory-php
    app.kubernetes.io/component: memory-php
    app.kubernetes.io/instance: memory-php
    app.kubernetes.io/part-of: memory-php-app
    app.openshift.io/runtime-namespace: memhpa
spec:
  replicas: 1
  selector:
    app: memory-php
    deploymentconfig: memory-php
  strategy:
    activeDeadlineSeconds: 21600
    resources: {}
    rollingParams:
      intervalSeconds: 1
      maxSurge: 25%
      maxUnavailable: 25%
      timeoutSeconds: 600
      updatePeriodSeconds: 1
    type: Rolling
  template:
    metadata:
      labels:
        app: memory-php
        deploymentconfig: memory-php
    spec:
      containers:
      - image: quay.io/f_bernal_cerpa/memory-php:latest
        imagePullPolicy: IfNotPresent
        name: memory-php
        ports:
        - containerPort: 80
          protocol: TCP
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
  test: false
