DEMO OSM/OCP4-istio/mem-hpa/3_svc.yaml
kind: Service
apiVersion: v1
metadata:
  name: memory-php
  labels:
    app: memory-php
spec:
  type: ClusterIP
  ports:
    - name: 80-tcp
      protocol: TCP
      port: 80
      targetPort: 80
    - name: 8080-tcp
      protocol: TCP
      port: 8080
      targetPort: 8080
  selector:
    app: memory-php
    deploymentconfig: memory-php
