DEMO OSM/OCP4-istio/mem-hpa/4_route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: memory-php
  labels:
    app: memory-php
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: memory-php
    weight: 100
  wildcardPolicy: None
